# os-course-task3

./: .appveyor.yml  CMakeLists.txt  CreateThread_example.cpp  README.md  README.md_  lab3.cpp  lab3.h  main.cpp  sem_example.c
.github/workflows/: cmake.yml
examples/: CreateThread.cpp  semaphore.c
test/: CMakeLists.txt  task1.txt  task10.txt  task11.txt  task12.txt  task13.txt  task14.txt  task15.txt  task16.txt  task17.txt  task18.txt  task19.txt  task2.txt  task20.txt  task3.txt  task4.txt  task5.txt  task6.txt  task7.txt  task8.txt  task9.txt  tests.cpp
thread_graphs/: Readme.md
